# metrics-visualizer

./: README.md  docker-compose.yml  pyproject.toml
grafana/dashboards/: Working.code-workspace  default-dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
metrics_emitter/: Dockerfile  app.py
